Fixed some null reference issues and added documentation

--- a/LocoSoftware.Configuration/LocoSoftware.Configuration.csproj
+++ b/LocoSoftware.Configuration/LocoSoftware.Configuration.csproj
@@ -4,6 +4,15 @@
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <Title>LocoSoftware.Configuration</Title>
+        <Authors>Oliver Karger</Authors>
+    </PropertyGroup>
+
+    <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+      <DebugSymbols>true</DebugSymbols>
+      <DebugType>embedded</DebugType>
+      <DocumentationFile>bin\Release\LocoSoftware.Configuration.xml</DocumentationFile>
+      <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     </PropertyGroup>
 
     <ItemGroup>
