Updated GitHub Workflow. Should now trigger correctly.

--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -2,10 +2,10 @@
 
 on:
   pull_request:
-    types: [opened, reopened]
+    types: [opened, reopened, synchronize, edited, unlocked]
     
 jobs:
-  build:
+  unittest:
     runs-on: ubuntu-latest
     strategy:
       matrix:
