--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,7 +1,12 @@
 ﻿name: NUnit Tests
 
-on: [ pull_request ]
-    
+on:
+  pull_request:
+    types: [ opened, reopened, synchronized, unlocked ]
+  push:
+    branches:
+      - main
+        
 jobs:
   tests:
     runs-on: ubuntu-latest
