--- a/LocoSoftware.Configuration.Testing/LocoSoftware.Configuration.Testing.csproj
+++ b/LocoSoftware.Configuration.Testing/LocoSoftware.Configuration.Testing.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Xml" Version="7.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
     <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.4.2" />
@@ -21,4 +22,9 @@
     <ProjectReference Include="..\LocoSoftware.Configuration\LocoSoftware.Configuration.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Include="./_TestAssets/ConfigurationSample.xml" CopyToOutputDirectory="Always" />
+    <Content Include="./_TestAssets/ConfigurationSample2.xml" CopyToOutputDirectory="Always" />
+  </ItemGroup>
+  
 </Project>
