--- a/LocoSoftware.Configuration.Testing/LocoSoftware.Configuration.Testing.csproj
+++ b/LocoSoftware.Configuration.Testing/LocoSoftware.Configuration.Testing.csproj
@@ -1,12 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
+    <TargetFrameworks>net7.0;netstandard2.0;netstandard2.1;net462;net481</TargetFrameworks>
+    <OutputType>Library</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
