--- a/LocoSoftware.Configuration/LocoSoftware.Configuration.csproj
+++ b/LocoSoftware.Configuration/LocoSoftware.Configuration.csproj
@@ -1,9 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net7.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
         <Title>LocoSoftware.Configuration</Title>
         <Authors>Oliver Karger</Authors>
         <Copyright>Loco Software (C) 2023</Copyright>
@@ -13,13 +10,16 @@
         <RepositoryUrl>https://github.com/Loco-Software/LocoSoftware.Configuration</RepositoryUrl>
         <RepositoryType>Git</RepositoryType>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-        <Version>0.9.1</Version>
-        <AssemblyVersion>0.9.1</AssemblyVersion>
-        <FileVersion>0.9.1</FileVersion>
+        <Version>0.9.2</Version>
+        <AssemblyVersion>0.9.2</AssemblyVersion>
+        <FileVersion>0.9.2</FileVersion>
+        <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
+        <TargetFrameworks>net7.0;net462;net481;netstandard2.0;netstandard2.1</TargetFrameworks>
+        <Company>Loco Software</Company>
     </PropertyGroup>
 
     <ItemGroup>
-        <None Include="../License.txt" Pack="true" PackagePath="$(PackageLicenseFile)"/>
+        <None Include="../License.txt" Pack="true" PackagePath="$(PackageLicenseFile)" />
     </ItemGroup>
     
     <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
@@ -29,9 +29,15 @@
       <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
       <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
     </PropertyGroup>
+    
+    <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+      <DebugType>full</DebugType>
+    </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration">
+          <Version>7.0.0</Version>
+      </PackageReference>
       <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.4" />
       <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="7.0.0" />
