Fixed remaining Tests. Updated Testing Assets and renamed Mocks for better usage

--- a/LocoSoftware.Configuration.Testing/LocoSoftware.Configuration.Testing.csproj
+++ b/LocoSoftware.Configuration.Testing/LocoSoftware.Configuration.Testing.csproj
@@ -23,6 +23,8 @@
   <ItemGroup>
     <Content Include="./_TestAssets/ConfigurationSample.xml" CopyToOutputDirectory="Always" />
     <Content Include="./_TestAssets/ConfigurationSample2.xml" CopyToOutputDirectory="Always" />
+    <Content Include="./_TestAssets/AutoMapStruct.xml" CopyToOutputDirectory="Always" />
+    <Content Include="./_TestAssets/ManualMapStruct.xml" CopyToOutputDirectory="Always" />
   </ItemGroup>
   
 </Project>
