--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,11 +8,12 @@ on:
         
 jobs:
   tests:
-    runs-on: ubuntu-latest
     strategy:
       matrix:
-        dotnet-version: [ '3.1.x', '6.0.x', '7.0.x' ]
+        dotnet-version: [ '2.x', '3.1.x', '6.0.x', '7.0.x' ]
+        operating-systems: [ 'windows-latest' ]
         
+    runs-on: ${{ matrix.operating-system }}
     steps:
       - uses: actions/checkout@v3
       - name: Setup .NET SDK ${{ matrix.dotnet-version }} 
