--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,7 +10,7 @@ jobs:
   tests:
     strategy:
       matrix:
-        dotnet-version: [ '2.x', '3.1.x', '6.0.x', '7.0.x' ]
+        dotnet-version: [ '4.6.x', '4.8.x', '7.0.x' ]
         operating-systems: [ 'windows-latest' ]
         
     runs-on: ${{ matrix.operating-systems }}
@@ -25,5 +25,5 @@ jobs:
       - name: Build
         run: dotnet build --configuration Release --no-restore
       - name: Test
-        run: dotnet test --no-restore --verbosity normal
+        run: dotnet test --no-restore --no-build --verbosity normal
       
