--- a/LocoSoftware.Configuration/LocoSoftware.Configuration.csproj
+++ b/LocoSoftware.Configuration/LocoSoftware.Configuration.csproj
@@ -14,7 +14,7 @@
         <AssemblyVersion>0.9.2</AssemblyVersion>
         <FileVersion>0.9.2</FileVersion>
         <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
-        <TargetFrameworks>net7.0;net462;net481</TargetFrameworks>
+        <TargetFrameworks>net7.0;net6.0</TargetFrameworks>
         <Company>Loco Software</Company>
     </PropertyGroup>
 
