--- a/LocoSoftware.Configuration.Testing/LocoSoftware.Configuration.Testing.csproj
+++ b/LocoSoftware.Configuration.Testing/LocoSoftware.Configuration.Testing.csproj
@@ -1,15 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
+    <TargetFrameworks>net7.0;net6.0</TargetFrameworks>
+    <OutputType>Library</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Xml" Version="7.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
     <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.4.2" />
@@ -21,4 +20,11 @@
     <ProjectReference Include="..\LocoSoftware.Configuration\LocoSoftware.Configuration.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Include="./_TestAssets/ConfigurationSample.xml" CopyToOutputDirectory="Always" />
+    <Content Include="./_TestAssets/ConfigurationSample2.xml" CopyToOutputDirectory="Always" />
+    <Content Include="./_TestAssets/AutoMapStruct.xml" CopyToOutputDirectory="Always" />
+    <Content Include="./_TestAssets/ManualMapStruct.xml" CopyToOutputDirectory="Always" />
+  </ItemGroup>
+  
 </Project>
