--- a/LocoSoftware.Configuration/LocoSoftware.Configuration.csproj
+++ b/LocoSoftware.Configuration/LocoSoftware.Configuration.csproj
@@ -1,22 +1,43 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net7.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
         <Title>LocoSoftware.Configuration</Title>
         <Authors>Oliver Karger</Authors>
+        <Copyright>Loco Software (C) 2023</Copyright>
+        <PackageProjectUrl>https://github.com/Loco-Software/LocoSoftware.Configuration</PackageProjectUrl>
+        <!--<PackageLicenseUrl>https://github.com/Loco-Software/LocoSoftware.Configuration/blob/main/License</PackageLicenseUrl>-->
+        <PackageLicenseFile>License.txt</PackageLicenseFile>
+        <RepositoryUrl>https://github.com/Loco-Software/LocoSoftware.Configuration</RepositoryUrl>
+        <RepositoryType>Git</RepositoryType>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <Version>0.9.2</Version>
+        <AssemblyVersion>0.9.2</AssemblyVersion>
+        <FileVersion>0.9.2</FileVersion>
+        <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
+        <TargetFrameworks>net7.0;net6.0</TargetFrameworks>
+        <Company>Loco Software</Company>
     </PropertyGroup>
 
+    <ItemGroup>
+        <None Include="../License.txt" Pack="true" PackagePath="$(PackageLicenseFile)" />
+    </ItemGroup>
+    
     <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
       <DebugSymbols>true</DebugSymbols>
       <DebugType>embedded</DebugType>
       <DocumentationFile>bin\Release\LocoSoftware.Configuration.xml</DocumentationFile>
       <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+      <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
+    </PropertyGroup>
+    
+    <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+      <DebugType>full</DebugType>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration">
+          <Version>7.0.0</Version>
+      </PackageReference>
       <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.4" />
       <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="7.0.0" />
